// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default Button 1`] = `
<button
  className="btn border default"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Extra Small Button 1`] = `
<button
  className="btn border xs"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Large Button 1`] = `
<button
  className="btn border xl"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Primary Button 1`] = `
<button
  className="btn bg-primary-500 hover:bg-primary-400 text-primary-complementary default"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Secondary Button 1`] = `
<button
  className="btn bg-secondary-500 hover:bg-secondary-400  text-secondary-complementary default"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Button Small Button 1`] = `
<button
  className="btn border sm"
  onClick={[Function]}
  onDragStart={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`Storyshots Card Empty 1`] = `
<div
  className="border-4 p-1 rounded-xl hover:shadow bg-gray-500 w-32 h-32"
/>
`;

exports[`Storyshots Card With Children 1`] = `
<div
  className="border-4 p-1 rounded-xl hover:shadow w-32 h-32"
>
  <div>
    First
  </div>
  <div>
    Second
  </div>
  <div>
    Third
  </div>
</div>
`;

exports[`Storyshots Select Primary 1`] = `
<div
  className=""
>
  <div
    onClick={[Function]}
  />
  <div
    aria-hidden={true}
    style={
      Object {
        "border": 0,
        "clip": "rect(0 0 0 0)",
        "clipPath": "inset(50%)",
        "height": 1,
        "margin": "0 -1px -1px 0",
        "overflow": "hidden",
        "padding": 0,
        "position": "absolute",
        "whiteSpace": "nowrap",
        "width": 1,
      }
    }
  >
    <input
      onFocus={[Function]}
      style={
        Object {
          "fontSize": 16,
        }
      }
      tabIndex={-1}
      type="text"
    />
    <label>
      <select
        name=""
        onChange={[Function]}
        size={10}
        tabIndex={-1}
        value=""
      >
        <option />
        <option
          value="$.0"
        >
          Red
        </option>
        <option
          value="$.1"
        >
          Orange
        </option>
        <option
          value="$.2"
        >
          Yellow
        </option>
        <option
          value="$.3"
        >
          Green
        </option>
        <option
          value="$.4"
        >
          Blue
        </option>
        <option
          value="$.5"
        >
          Purple
        </option>
        <option
          value="$.6"
        >
          Black
        </option>
        <option
          value="$.7"
        >
          White
        </option>
        <option
          value="$.8"
        >
          Lime
        </option>
        <option
          value="$.9"
        >
          Fushsia
        </option>
      </select>
    </label>
  </div>
  <button
    aria-controls={null}
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="react-aria5932619224-7"
    className="rounded-xl px-2 bg-white w-full flex justify-between gap-2"
    id="react-aria5932619224-3"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      id="react-aria5932619224-7"
    >
      Select an option
    </span>
    <span
      aria-hidden="true"
    >
      ▼
    </span>
  </button>
</div>
`;

exports[`Storyshots TopBar Empty 1`] = `
<div
  className="top-bar"
/>
`;

exports[`Storyshots TopBar Primary 1`] = `
<div
  className="top-bar bg-primary-500 text-primary-complementary"
>
  Some content
</div>
`;

exports[`Storyshots TopBar Secondary 1`] = `
<div
  className="top-bar bg-secondary-500 text-secondary-complementary"
>
  <div>
    One 
  </div>
  <div>
    Two
  </div>
  <div>
    Three
  </div>
</div>
`;

exports[`Storyshots TopBar With Children 1`] = `
<div
  className="top-bar"
>
  Some content
</div>
`;
